add role check and return UserDTO